--- a/mosip-launcher/ansible-playbooks/setup-deployments/setup-external-dependencies/configuration/add-dmz-server-to-jenkins.j2
+++ b/mosip-launcher/ansible-playbooks/setup-deployments/setup-external-dependencies/configuration/add-dmz-server-to-jenkins.j2
@@ -15,7 +15,7 @@ println "#######################################################################
   name,hostname,username,encryptedPassword,remoteRootDir,port,timeout,overrideKey,keyPath,key,disableExec
 */
 def hosts = [
-        ["{{ env_name }}DmzDeploymentServer","{{ hostvars['localhost']['output_private_ip_dmz_' + env_name] | json_query('stdout')}}","{{ global_username }}","","/home/{{ global_username }}",22,30000,true,'','''{{ hostvars["localhost"]["private_key_content_dmz_" + env_name]}}''',false]
+        ["{{ env_name }}DmzDeploymentServer","{{ hostvars['localhost']['output_private_ip_dmz_' + env_name] | json_query('stdout')}}","{{ global_username }}","","",22,30000,true,'','''{{ hostvars["localhost"]["private_key_content_dmz_" + env_name]}}''',false]
 ]
 
 println 'Renewing Global Publish-Over-SSH-Server Configs'
