[MOSIP-257]  Config server updated.

--- a/deployment/sandbox/v2/roles/config-server/templates/k8s_deploy.xml.j2
+++ b/deployment/sandbox/v2/roles/config-server/templates/k8s_deploy.xml.j2
@@ -5,7 +5,7 @@ metadata:
   name: kernel-config-server
   namespace: default
 spec:
-  replicas: 2 
+  replicas: 1 
   selector:
     matchLabels:
       app: kernel-config-server
@@ -39,8 +39,11 @@ kind: Service
 metadata:
   name: kernel-config-server
   namespace: default
+
 spec:
-  ports:
-    - port: 51000
   selector:
     app: kernel-config-server
+  type: LoadBalancer
+  ports:
+    - port: 51000
+      targetPort: 51000
