--- a/deployment/sandbox/v2/roles/config-gitrepo/templates/k8s_git_service.yml.j2
+++ b/deployment/sandbox/v2/roles/config-gitrepo/templates/k8s_git_service.yml.j2
@@ -2,7 +2,8 @@
 kind: Service
 apiVersion: v1
 metadata:
-  name: gitrepo 
+  name: '{{gitrepo_service_name}}'
+
 spec:
   type: ClusterIP
   ports:
