[MOSIP-257] Property moved to config-gitrepo.

--- a/deployment/sandbox/v2/roles/config-server/templates/k8s_deploy.xml.j2
+++ b/deployment/sandbox/v2/roles/config-server/templates/k8s_deploy.xml.j2
@@ -22,7 +22,8 @@ spec:
     spec:
       containers:
       - name: kernel-config-server
-        image: "kernel-config-server:{{version}}"
+        # console:5000 is the registry running on console
+        image: "console:5000/kernel-config-server:{{version}}"
         ports:
         - containerPort: 51000 
 ---
