--- a/deployment/sandbox-v2/roles/config-gitrepo/templates/k8s_git_endpoint.yml.j2
+++ b/deployment/sandbox-v2/roles/config-gitrepo/templates/k8s_git_endpoint.yml.j2
@@ -2,7 +2,7 @@
 kind: Endpoints
 apiVersion: v1
 metadata:
-  name: '{{gitrepo_service_name}}'
+  name: gitrepo
 subsets:
   - addresses:
     - ip: '{{console_ip}}'
