[MOSIP-257] Keycloak init. WIP.

--- a/deployment/sandbox-v2/roles/keycloak/templates/k8s_keycloak.yml.j2
+++ b/deployment/sandbox-v2/roles/keycloak/templates/k8s_keycloak.yml.j2
@@ -32,11 +32,11 @@ spec:
         - name: KEYCLOAK_PASSWORD 
           value: '{{keycloak_password}}'
         - name: DB_ADDR
-          value: postgres
+          value: postgres # Service name
         - name: DB_USER 
-          value: postgres
+          value: '{{postgres_user}}' 
         - name: DB_PASSWORD
-          value: postgres
+          value: '{{postgres_password}}' 
   
         ports:
         - containerPort: 8080 # default 
