[MOSIP-257] Versions of keycloak and postgres fixed.

--- a/deployment/sandbox-v2/roles/postgres/templates/k8s_postgres.yml.j2
+++ b/deployment/sandbox-v2/roles/postgres/templates/k8s_postgres.yml.j2
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: postgres
-        image: postgres:latest 
+        image: postgres:12.2
         env:
         - name: POSTGRES_PASSWORD
           value: {{postgres_password}} 
