--- a/deployment/sandbox-v2/roles/keycloak/templates/k8s_keycloak.yml.j2
+++ b/deployment/sandbox-v2/roles/keycloak/templates/k8s_keycloak.yml.j2
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: keycloak 
-        image: jboss/keycloak 
+        image: jboss/keycloak:9.0.0 
         env:
         - name: DB_VENDOR 
           value: postgres
