changing nginx proxy

--- a/deployment/sandbox/playbooks/templates/nginx-default.j2
+++ b/deployment/sandbox/playbooks/templates/nginx-default.j2
@@ -34,6 +34,15 @@ server {
         proxy_set_header X-Forwarded-Proto $scheme;
         proxy_pass http://localhost:8083;
      }
+
+    location /v1/utility/packetgenerator/ {
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_pass http://localhost:8082;
+     }
+
     location / {
         proxy_pass http://localhost:3000;
         proxy_http_version 1.1;
