--- a/deployment/sandbox-v2/roles/config-server/templates/k8s_config_server.yml.j2
+++ b/deployment/sandbox-v2/roles/config-server/templates/k8s_config_server.yml.j2
@@ -2,13 +2,13 @@
 apiVersion: apps/v1
 kind: Deployment 
 metadata:
-  name: kernel-config-server
+  name: config_server_name
   namespace: default
 spec:
   replicas: 1 
   selector:
     matchLabels:
-      app: kernel-config-server
+      app: config_server_name
   minReadySeconds: 10
   strategy:
     type: RollingUpdate
@@ -18,23 +18,23 @@ spec:
   template:
     metadata:
       labels:
-        app: kernel-config-server 
+        app: config_server_name 
     spec:
       containers:
-      - name: kernel-config-server
-        image: "{{local_registry}}/kernel-config-server:{{modules['kernel-config-server']['version']}}"
+      - name: config_server_info_name
+        image: "{{local_registry}}/config_server_name:config_server_version}}
         ports:
         - containerPort: 51000 
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: kernel-config-server
+  name: config_server_name
   namespace: default
 
 spec:
   selector:
-    app: kernel-config-server
+    app: config_server_name
   ports:
     - port: 80
       targetPort: 51000
