--- a/deployment/sandbox-v2/roles/keycloak/templates/k8s_keycloak.yml.j2
+++ b/deployment/sandbox-v2/roles/keycloak/templates/k8s_keycloak.yml.j2
@@ -25,14 +25,16 @@ spec:
       - name: keycloak 
         image: jboss/keycloak:9.0.0 
         env:
-        - name: DB_VENDOR 
-          value: postgres
         - name: KEYCLOAK_USER 
           value: '{{keycloak_user}}' 
         - name: KEYCLOAK_PASSWORD 
           value: '{{keycloak_password}}'
+        - name: DB_VENDOR 
+          value: postgres
         - name: DB_ADDR
-          value: postgres # Service name
+          value: postgres # Service name TODO: pickup up name from config
+        - name: DB_PORT
+          value: "80" 
         - name: DB_USER 
           value: '{{postgres_user}}' 
         - name: DB_PASSWORD
