--- a/deployment/sandbox-v2/roles/kernel/kernel-emailnotification/templates/k8s_email.yml.j2
+++ b/deployment/sandbox-v2/roles/kernel/kernel-emailnotification/templates/k8s_email.yml.j2
@@ -2,13 +2,13 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: {{kernel_auditmanager_name}}
+  name: {{kernel_emailnotification_name}}
   namespace: default
 spec:
   replicas: 1
   selector:
     matchLabels:
-      app: {{kernel_auditmanager_name}}
+      app: {{kernel_emailnotification_name}}
   minReadySeconds: 10
   strategy:
     type: RollingUpdate
@@ -18,11 +18,11 @@ spec:
   template:
     metadata:
       labels:
-        app: {{kernel_auditmanager_name}}
+        app: {{kernel_emailnotification_name}}
     spec:
       containers:
-      - name: {{kernel_auditmanager_name}}
-        image: '{kernel_auditmanager_image']}}:{{kernel_auditmanager_version}}'
+      - name: {{kernel_emailnotification_name}}
+        image: '{{kernel_emailnotification_image}}:{{kernel_emailnotification_version}}'
         env:
         - name: active_profile_env
           value: qa
@@ -35,18 +35,18 @@ spec:
         - name: is_glowroot_env
           value: absent
         ports:
-        - containerPort: 8081
+        - containerPort: 8083
         imagePullPolicy: Always
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{kernel_auditmanager_name}}
+  name: {{kernel_emailnotification_name}}
   namespace: default
 spec:
   ports:
   - port: 80 
-    targetPort: 8081
+    targetPort: 8083
   selector:
-    app: {{kernel_auditmanager_name}}
+    app: {{kernel_emailnotification_name}}
   type: NodePort
