[MOSIP-257] Pre Reg UI added. WIP. Other cleanup.

--- a/deployment/sandbox-v2/roles/config-gitrepo/templates/k8s_git_endpoint.yml.j2
+++ b/deployment/sandbox-v2/roles/config-gitrepo/templates/k8s_git_endpoint.yml.j2
@@ -5,6 +5,6 @@ metadata:
   name: gitrepo
 subsets:
   - addresses:
-    - ip: '{{console_ip}}'
+    - ip: "{{hostvars['console']['ansible_host']}}"
     ports:
       - port: {{config_gitrepo_port}} 
