[MOSIP-257] Persistent Volume method changed to 'local'.

--- a/deployment/sandbox-v2/roles/postgres/templates/k8s_pg_storage.yml.j2
+++ b/deployment/sandbox-v2/roles/postgres/templates/k8s_pg_storage.yml.j2
@@ -1,29 +1,53 @@
-kind: PersistentVolume
-apiVersion: v1
-metadata:
-  name: postgres-pv-volume
-  labels:
-    type: local
-    app: postgres
-spec:
-  storageClassName: manual
-  capacity:
-    storage: 1Gi
-  accessModes:
-    - ReadWriteMany
-  hostPath:
-    path: "/var/lib/postgresql/data/" 
 ---
+
+apiVersion: storage.k8s.io/v1
+kind: StorageClass
+metadata:
+  name: local-storage
+provisioner: kubernetes.io/no-provisioner
+volumeBindingMode: WaitForFirstConsumer
+---
+
+apiVersion: v1
+kind: PersistentVolume
+metadata:
+  name: postgres-local-storage 
+  labels:
+    name: postgres-local-storage
+spec:
+  capacity:
+    storage: 1Gi 
+  volumeMode: Filesystem
+  accessModes:
+  - ReadWriteOnce
+  persistentVolumeReclaimPolicy: Retain # Only this policy supported for this type of PV 
+  storageClassName: local-storage
+  local:
+    path: '{{postgres_local_storage_path}}'
+  nodeAffinity:
+    required:
+      nodeSelectorTerms:
+      - matchExpressions:
+        - key: kubernetes.io/hostname
+          operator: In
+          values:
+          - '{{postgres_local_storage_node}}' # The node on which this directory exists
+---
+
 kind: PersistentVolumeClaim
 apiVersion: v1
 metadata:
   name: postgres-pv-claim
   labels:
-    app: postgres
+    app: postgres-pv-claim
 spec:
-  storageClassName: manual
+  storageClassName: local-storage
   accessModes:
-    - ReadWriteMany
+    - ReadWriteOnce
   resources:
     requests:
       storage: 1Gi
+  selector:
+    matchLabels:
+      name: 'postgres-local-storage'
+  
