--- a/deployment/sandbox-v2/roles/config-server/templates/k8s_config_server.yml.j2
+++ b/deployment/sandbox-v2/roles/config-server/templates/k8s_config_server.yml.j2
@@ -22,9 +22,16 @@ spec:
     spec:
       containers:
       - name: {{config_server_name}}
-        image: "{{local_registry}}/{{config_server_name}}:{{config_server_version}}"
+        image: "{{config_server_image}}:{{config_server_version}}"
+        env:
+          env_git_uri: {{config_git_repo_path}}         
+          env_version: {{config_server_version}}
+          env_jar_name: {{config_server_jar_name}}
+          env_config_folder: {{config_git_repo_search_folder}}
+        imagePullPolicy: "IfNotPresent" 
         ports:
         - containerPort: 51000 
+
 ---
 apiVersion: v1
 kind: Service
