Keycloak added to Ingress.  Pre Reg related additions.

--- a/deployment/sandbox-v2/roles/ingress/templates/k8s_ingress.yml.j2
+++ b/deployment/sandbox-v2/roles/ingress/templates/k8s_ingress.yml.j2
@@ -20,4 +20,8 @@ spec:
         backend:
           serviceName: {{pre_reg_login_name}}
           servicePort: 80
+      - path: /auth
+        backend:
+          serviceName: keycloak
+          servicePort: 80
 
