PreReg, Keycloak added.

--- a/deployment/sandbox-v2/roles/ingress/templates/k8s_ingress.yml.j2
+++ b/deployment/sandbox-v2/roles/ingress/templates/k8s_ingress.yml.j2
@@ -16,7 +16,7 @@ spec:
         backend:
           serviceName: {{kernel_auth_name}}
           servicePort: 80
-      - path: /preregistration/v1
+      - path: /preregistration/v1/login
         backend:
           serviceName: {{pre_reg_login_name}}
           servicePort: 80
