--- a/deployment/sandbox-v2/app/roles/ingress/templates/k8s_ingress.yml.j2
+++ b/deployment/sandbox-v2/app/roles/ingress/templates/k8s_ingress.yml.j2
@@ -3,6 +3,9 @@ kind: Ingress
 metadata:
   name: main-ingress
   namespace: default
+  annotations:
+    nginx.ingress.kubernetes.io/rewrite-target: /$2
+
 
 spec:
   rules:
@@ -20,7 +23,7 @@ spec:
         backend:
           serviceName: {{pre_reg_login_name}}
           servicePort: 80
-      - path: /auth
+      - path: /keycloak(/|$)(.*)
         backend:
           serviceName: keycloak
           servicePort: 80
