--- a/deployment/sandbox-v2/app/roles/keycloak/templates/k8s_keycloak.yml.j2
+++ b/deployment/sandbox-v2/app/roles/keycloak/templates/k8s_keycloak.yml.j2
@@ -39,6 +39,8 @@ spec:
           value: '{{postgres_user}}' 
         - name: DB_PASSWORD
           value: '{{postgres_password}}' 
+        - name: KEYCLOAK_FRONTEND_URL
+          value: '{{keycloak_external_url}}' 
   
         ports:
         - containerPort: 8080 # default 
