[MOSIP-438] Substantial changes for Pre-Reg, Ingress.  Improvement of Kube files with better labels.

--- a/deployment/sandbox-v2/app/roles/kernel/kernel-emailnotification/templates/k8s_email.yml.j2
+++ b/deployment/sandbox-v2/app/roles/kernel/kernel-emailnotification/templates/k8s_email.yml.j2
@@ -4,6 +4,8 @@ kind: Deployment
 metadata:
   name: {{kernel_emailnotification_name}}
   namespace: default
+  labels:
+    module: kernel
 spec:
   replicas: 1
   selector:
@@ -19,6 +21,7 @@ spec:
     metadata:
       labels:
         app: {{kernel_emailnotification_name}}
+        module: kernel
     spec:
       containers:
       - name: {{kernel_emailnotification_name}}
