--- a/deployment/sandbox-v2/app/roles/pre-reg/pre-reg-ui/templates/k8s_pre_reg_ui.yml.j2
+++ b/deployment/sandbox-v2/app/roles/pre-reg/pre-reg-ui/templates/k8s_pre_reg_ui.yml.j2
@@ -4,6 +4,8 @@ kind: Deployment
 metadata:
   name: {{pre_reg_ui_name}}
   namespace: default
+  labels:
+    module: pre-reg
 spec:
   replicas: 1
   selector:
@@ -19,6 +21,7 @@ spec:
     metadata:
       labels:
         app: {{pre_reg_ui_name}}
+        module: pre-reg
     spec:
       containers:
       - name: {{pre_reg_ui_name}}
@@ -29,8 +32,8 @@ spec:
         volumeMounts:
             - name: ui-config 
               mountPath: /usr/share/nginx/html/assets/config.json
-              subPath: config.json #TODO: subPath is needed.  Check why
               # The above path is fixed in Dockerfile
+              subPath: config.json #TODO: subPath is needed.  Check why
               # The config map gets mounted like files where key=file, value=file contents
       volumes:
         - name: ui-config
