--- a/deployment/sandbox-v2/app/roles/ingress/templates/k8s_ingress.yml.j2
+++ b/deployment/sandbox-v2/app/roles/ingress/templates/k8s_ingress.yml.j2
@@ -19,14 +19,14 @@ spec:
           serviceName: {{kernel_auth_name}}
           servicePort: 80
 
+      - path: /v1/masterdata
+        backend:
+          serviceName: {{kernel_masterdata_name}}
+          servicePort: 80
+
       - path: /preregistration/v1/login
         backend:
           serviceName: {{pre_reg_login_name}}
-          servicePort: 80
-
-      - path: /preregistration/v1/applications
-        backend:
-          serviceName: {{pre_reg_demographic_name}}
           servicePort: 80
 
       - path: /preregistration/v1/applications
@@ -49,11 +49,6 @@ spec:
           serviceName: {{pre_reg_booking_name}}
           servicePort: 80
 
-      - path: /preregistration/v1/appointment
-        backend:
-          serviceName: {{pre_reg_booking_name}}
-          servicePort: 80
-
       - path: /preregistration/v1/batch
         backend:
           serviceName: {{pre_reg_batchjob_name}}
@@ -62,6 +57,16 @@ spec:
       - path: /preregistration/v1/translitration
         backend:
           serviceName: {{pre_reg_translitration_name}}
+          servicePort: 80
+
+      - path: /preregistration/v1/qrCode
+        backend:
+          serviceName: {{pre_reg_generateqrcode_name}}
+          servicePort: 80
+
+      - path: /preregistration/v1/notification
+        backend:
+          serviceName: {{pre_reg_notification_name}}
           servicePort: 80
 
       - path: /pre-registration-ui
