[MOSIP-438]  All modules needed for PreReg added.

--- a/deployment/sandbox-v2/app/roles/ingress/templates/k8s_ingress.yml.j2
+++ b/deployment/sandbox-v2/app/roles/ingress/templates/k8s_ingress.yml.j2
@@ -24,6 +24,11 @@ spec:
           serviceName: {{kernel_masterdata_name}}
           servicePort: 80
 
+      - path: /v1/applicanttype
+        backend:
+          serviceName: {{kernel_applicanttype_name}}
+          servicePort: 80
+
       - path: /preregistration/v1/login
         backend:
           serviceName: {{pre_reg_login_name}}
