[MOSIP-257] Automated related to misc tasks for console and kubernetes node.

--- a/deployment/sandbox-v2/app/roles/config-server/templates/k8s_repo_storage.yml.j2
+++ b/deployment/sandbox-v2/app/roles/config-server/templates/k8s_repo_storage.yml.j2
@@ -24,7 +24,7 @@ spec:
   persistentVolumeReclaimPolicy: Retain # Only this policy supported for this type of PV 
   storageClassName: local-storage
   local:
-    path: {{config_repo_node_path}}
+    path: {{config_repo_node_dir}}
   nodeAffinity:
     required:
       nodeSelectorTerms:
