--- a/deployment/sandbox-v2/app/roles/keycloak/keycloak/templates/k8s_keycloak.yml.j2
+++ b/deployment/sandbox-v2/app/roles/keycloak/keycloak/templates/k8s_keycloak.yml.j2
@@ -32,7 +32,7 @@ spec:
         - name: DB_VENDOR 
           value: postgres
         - name: DB_ADDR
-          value: postgres # Service name TODO: pickup up name from config
+          value: {{postgres_name}} 
         - name: DB_PORT
           value: "80" 
         - name: DB_USER 
