[MOSIP-257] Ingress service changed to NodePort. Metallb not needed.

--- a/deployment/sandbox-v2/app/roles/keycloak/keycloak/templates/k8s_keycloak.yml.j2
+++ b/deployment/sandbox-v2/app/roles/keycloak/keycloak/templates/k8s_keycloak.yml.j2
@@ -50,13 +50,13 @@ spec:
 apiVersion: v1
 kind: Service
 metadata:
-  name: {{keycloak_name}}
+  name: '{{keycloak_name}}'
   namespace: default
 
 spec:
   selector:
-    app: {{keycloak_name}}
+    app: '{{keycloak_name}}'
   type: NodePort  # For init of DB from outside Minikube VM. 
   ports:
-    port: 80 
-    targetPort: 8080 
+    - port: 80 
+      targetPort: 8080 
