--- a/deployment/sandbox-v2/app/roles/kernel/kernel-masterdata/templates/k8s_masterdata.yml.j2
+++ b/deployment/sandbox-v2/app/roles/kernel/kernel-masterdata/templates/k8s_masterdata.yml.j2
@@ -38,6 +38,9 @@ spec:
           value: absent
         ports:
         - containerPort: {{kernel_masterdata_container_port}} 
+        readinessProbe:
+          tcpSocket:
+            port: {{kernel_masterdata_container_port}}  # All defaults used
 ---
 apiVersion: v1
 kind: Service
@@ -50,4 +53,3 @@ spec:
     targetPort: {{kernel_masterdata_container_port}} 
   selector:
     app: {{kernel_masterdata_name}}
-  type: NodePort
