--- a/deployment/sandbox-v2/app/roles/kernel/kernel-applicant/templates/k8s_applicant.yml.j2
+++ b/deployment/sandbox-v2/app/roles/kernel/kernel-applicant/templates/k8s_applicant.yml.j2
@@ -39,6 +39,9 @@ spec:
           value: absent
         ports:
         - containerPort: {{kernel_applicanttype_container_port}} 
+        readinessProbe:
+          tcpSocket:
+            port: {{kernel_applicanttype_container_port}}  # All defaults used
 ---
 apiVersion: v1
 kind: Service
@@ -51,4 +54,3 @@ spec:
     targetPort: {{kernel_applicanttype_container_port}} 
   selector:
     app: {{kernel_applicanttype_name}}
-  type: NodePort
