--- a/deployment/sandbox-v2/app/roles/kernel/kernel-prid/templates/k8s_kernel_prid.yml.j2
+++ b/deployment/sandbox-v2/app/roles/kernel/kernel-prid/templates/k8s_kernel_prid.yml.j2
@@ -42,6 +42,9 @@ spec:
           value: absent
         ports:
         - containerPort: {{kernel_pridgenerator_container_port}} 
+        readinessProbe:
+          tcpSocket:
+            port: {{kernel_pridgenerator_container_port}}  # All defaults used
 ---
 apiVersion: v1
 kind: Service
@@ -54,4 +57,3 @@ spec:
     targetPort: {{kernel_pridgenerator_container_port}} 
   selector:
     app: {{kernel_pridgenerator_name}}
-  type: NodePort
