[MOSIP-257] Wait removed for most pods except few who critical for others.

--- a/deployment/sandbox-v2/app/roles/ingress/templates/k8s_ingress.yml.j2
+++ b/deployment/sandbox-v2/app/roles/ingress/templates/k8s_ingress.yml.j2
@@ -3,7 +3,9 @@ kind: Ingress
 metadata:
   name: main-ingress
   namespace: default
-
+  annotations:
+     kubernetes.io/ingress.class: "nginx"
+     nginx.com/health-checks: "true"
 spec:
   rules:
   - http:
