--- a/deployment/sandbox-v2/app/roles/postgres/postgres/templates/k8s_postgres.yml.j2
+++ b/deployment/sandbox-v2/app/roles/postgres/postgres/templates/k8s_postgres.yml.j2
@@ -35,7 +35,7 @@ spec:
         - containerPort: {{postgres_container_port}} 
         readinessProbe:
           tcpSocket:
-            port: {{keycloak_container_port}}  # All defaults used
+            port: {{postgres_container_port}}  # All defaults used
         volumeMounts:
         - name: pg-data
           mountPath: /var/lib/postgresql/data/ # See notes above
