[MOSIP-257] Bug fixes.

--- a/deployment/sandbox-v2/app/roles/keycloak/keycloak/templates/k8s_keycloak.yml.j2
+++ b/deployment/sandbox-v2/app/roles/keycloak/keycloak/templates/k8s_keycloak.yml.j2
@@ -59,4 +59,4 @@ spec:
     app: '{{keycloak_name}}'
   ports:
     - port: 80 
-      targetPort: 8080 
+      targetPort: {{keycloak_container_port}} 
